--- a/4(1)-Basic_Statistics/regression_correlation.ipynb
+++ b/4(1)-Basic_Statistics/regression_correlation.ipynb
@@ -395,7 +395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ybigta",
    "language": "python",
    "name": "python3"
   },
